--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "framer-motion": "^11.2.5",
     "groq-sdk": "^0.3.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
